# smart-city-fix-backend

./: .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
alembic/: env.py
alembic/versions/: d49bc10bcf76_add_fire_role_to_department_role_enum.py
routers/: admin.py  auth.py  complaints.py  dashboard.py  notifications.py  users.py
utils/: email_service.py  notifications.py  workflow.py
