[project]
name = "qr-complaint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "fastapi>=0.133.0",
    "openai>=2.24.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "pywebpush>=2.3.0",
    "sqlalchemy>=2.0.47",
    "tzdata>=2026.1",
    "uvicorn>=0.41.0",
]
